--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body
     flex-direction: column;
     justify-content: center;
 
+    margin: 2em 0px;
     gap: 3em;
 }
 
@@ -68,16 +69,37 @@ body
     
 }
 
+.inputContainerContent div
+{
+    width: 100%;
+
+    display: flex;
+   
+}
+
+.inputIcon
+{
+    display: inline;
+    width: 1em;
+
+    padding: 0.5em;
+    background-color: #0a96ba;
+}
+
 .inputContainerContent input
 {
     width: 100%;
-    padding: 0.5em 0px 0.5em 0px;
+    
+    font-size: 1em;
 
 
-    background-color: white;
 
     border: 1px solid #0a96ba;
- 
+    outline: none;
+
+    padding: 0.5em 0 0.5em 1em;
+
+    background-color: white;
 }
 
 .inputContainerContent button
@@ -98,7 +120,12 @@ body
 
 .listContainer
 {
+
     width: 83.5%;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
 
     margin-left: auto;
     margin-right: auto;
@@ -106,13 +133,15 @@ body
    
     
     border-radius: 0.2em;
+
+    
 }
 
 .tabsContainer
 {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    
     gap: 1em;
 }
 
@@ -132,15 +161,31 @@ body
 
 .scrollContainer
 {
-    border: 5px solid purple;
+    width: 100%;
 }
 
-.scrollContainer h3
+.task
 {
-    text-align: center;
+
+   
+    display: flex;
+    justify-content: space-between;
+   
+    padding: 0.5em;
+    border: 2px solid lightgray;
 }
 
-
+.icons
+{
+    display: flex;
+    gap: 0.5em;
+   
+}
+.icons img
+{
+    width: 1em;
+    gap: 0.5em;
+}
 
 
 
@@ -163,3 +208,4 @@ body
     border: none;
     border-radius: 2px;
 }
+
