--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body
 {
 
    
-    height: 100vh;
+    height:100vh;
     font-family: "Montserrat", serif;
     
 }   
@@ -25,11 +25,13 @@ body
 .container
 {
     display: 80%;
+    height: 100vh; /*  To enable the scroll effect in the task scroll      */
+
     display: flex;
     flex-direction: column;
     justify-content: center;
 
-    margin: 2em 0px;
+    margin: 0em 0px;
     gap: 3em;
 }
 
@@ -123,6 +125,7 @@ body
 
     width: 83.5%;
     
+
     display: flex;
     flex-direction: column;
     gap: 1.5em;
@@ -133,7 +136,7 @@ body
    
     
     border-radius: 0.2em;
-
+    
     
 }
 
@@ -162,6 +165,17 @@ body
 .scrollContainer
 {
     width: 100%;
+    max-height: 50%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+
+
+    overflow-y: auto;
+
+    
+
 }
 
 .task
