--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 
 
 
+/*
+
+    <div class="task" id="9999">
+                    
+        <p>Original NOT SHOWN</p>
+
+        <div class="icons">
+            <input type="checkbox">
+            <img src="./sourceImages/icons/pencil-solid.svg" alt="pencilIcon">
+            <img src="./sourceImages/icons/trash-solid.svg" alt="deleteIcon">
+        </div>
+    </div>
+
+
+*/
+
+
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
@@ -165,7 +185,7 @@ body
     gap: 1em;
 }
 
-.tabsContainer button
+.tabButton
 {
 
     width: 100%;
@@ -228,7 +248,7 @@ body
     gap: 1em;
 }
 
-.deleteContainer button
+.deleteButton
 {
     width: 100%;
     padding: 0.5em 0px 0.5em 0px;
@@ -240,3 +260,8 @@ body
     border-radius: 2px;
 }
 
+.hoverEffect
+{
+    box-shadow: 0 0 20px rgba(10, 150, 186, 0.5);
+   
+}
