--- a/style.css
+++ b/style.css
@@ -141,6 +141,12 @@ body
     background-color: white;
 }
 
+#inputNote
+{
+    display: none;
+    color: red;
+}
+
 .inputContainerContent button
 {
     width: 100%;
@@ -242,6 +248,8 @@ body
 {
     width: 1em;
     gap: 0.5em;
+
+    cursor: pointer;
 }
 
 
